fix: fix default theme num style

--- a/src/styles/folder-count.css
+++ b/src/styles/folder-count.css
@@ -5,7 +5,7 @@
   font-size: calc(100% * 0.8);
   margin-right: 4px;
   /* border-radius: 3px; */
-  /* padding: 2px 4px; */
+  padding: 2px 0;
   /* background-color: var(--background-secondary-alt); */
   transition: opacity 200ms ease-in-out;
 }
@@ -19,3 +19,4 @@ body:not(.oz-show-all-num)
 .nav-folder-title[data-count="0"]::after {
   display: none;
 }
+
