--- a/src/styles/folder-count.css
+++ b/src/styles/folder-count.css
@@ -1,22 +1,21 @@
 .nav-folder-title[data-count]::after {
-  content: attr(data-count);
-  display: inline-block;
-  position: relative;
-  font-size: calc(100% * 0.8);
-  margin-right: 4px;
-  /* border-radius: 3px; */
-  padding: 2px 0;
-  /* background-color: var(--background-secondary-alt); */
-  transition: opacity 200ms ease-in-out;
+    content: attr(data-count);
+    display: inline-block;
+    position: relative;
+    font-size: calc(100% * 0.8);
+    margin-right: 4px;
+    /* border-radius: 3px; */
+    padding: 2px 0;
+    /* background-color: var(--background-secondary-alt); */
+    transition: opacity 200ms ease-in-out;
 }
 
 body:not(.oz-show-all-num)
-  .nav-folder:not(.is-collapsed)
-  > .nav-folder-title.oz-with-subfolder[data-count]::after {
+    .nav-folder:not(.is-collapsed)
+    > .nav-folder-title.oz-with-subfolder[data-count]::after {
     opacity: 0;
 }
 
-.nav-folder-title[data-count="0"]::after {
-  display: none;
+.nav-folder-title[data-count='0']::after {
+    display: none;
 }
-
